--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 29 14:56:29 CEST 2019
-sdk.dir=/Users/g.sinatra/Library/Android/sdk
+#Mon Jun 10 11:37:30 CEST 2019
+sdk.dir=C\:\\Users\\g.sinatra\\AppData\\Local\\Android\\Sdk
